--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,25 +1,19 @@
-name: Gabriel
-
+name: gabriel
 on:
-  push:
-    branches: [ main ]
   pull_request:
     branches: [ main ]
-
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Gabriel
-      run: dotnet build --no-restore
-    - name: Gabriel
-      run: dotnet Gabriel --no-build --verbosity normal
+    - name: Setting Gabriel Project
+      env:
+        HEROKU_API_KEY: 231e3ae7-32d2-48fd-bc10-526f1dc4367c
+        APP_NAME: gabrielAdedeji
+      run: |
+        docker build -t Gabriel .
+        docker tag Gabriel registry.heroku.com
+        docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
+        heroku container:push web -a $APP_NAME
+        heroku container:release web -a $APP_NAME
