--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,10 +10,10 @@ jobs:
     - name: Setting Gabriel Project
       env:
         HEROKU_API_KEY: 231e3ae7-32d2-48fd-bc10-526f1dc4367c
-        APP_NAME: gabrielAdedeji
+        APP_NAME: gabrieladedeji
       run: |
-        docker build -t Gabriel .
-        docker tag Gabriel registry.heroku.com
+        docker build -t gabriel .
+        docker tag gabriel registry.heroku.com
         docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
         heroku container:push web -a $APP_NAME
         heroku container:release web -a $APP_NAME
